--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic
 sudo: required
 services:
   - docker
@@ -6,4 +7,4 @@ before_install:
   - docker build -t tumis/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run tumis/docker-react npm run test -- --coverage
+  - docker run -e CI=true tumis/docker-react npm run test
