--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t tumis/docker-react -f Dockerfile.dev .
 
 script:
-  -  - docker run -e CI=true USERNAME/docker-react npm run test
+  - docker run -e CI=true USERNAME/docker-react npm run test
 deploy: 
   edge: true
   provider: elasticbeanstalk 
